[package]
name = "blynk_io"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Blynk.io streaming API integration in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
restruct = { git = "https://github.com/lukaslueg/restruct" }
restruct_derive = { git = "https://github.com/lukaslueg/restruct" }
num_enum = "0.5.6"
simple_logger = {version = "2.1.0", optional = true }

[features]
build-binary = ["simple_logger"]

[[bin]]
name = "blynk_io"
required-features = ["build-binary"]
